prevent recalculating vh on mobile

--- a/src/app/pages/portfolio/portfolio.component.scss
+++ b/src/app/pages/portfolio/portfolio.component.scss
@@ -12,6 +12,7 @@ img.avatar {
 .cover-photo {
   width: 100%;
   height: 35vh;
+  height: calc(var(--vh, 1vh) * 35);
   background-size: cover;
   border: 1px solid black;
   border-radius: 5px;
